# Betriebssysteme_Praktikum

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  doxygen.conf  logger
docs/: Doxyfile  Fragen.txt  Struct_ISend_IRecv.drawio  Struktur_Shared_Memory.drawio  generate_Documentation.sh
html/: OSMP_8h_source.html  dir_014ecfd77f177bed49a0e99a5797ac24.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  graph_legend.html  index.html  md_README.html  pages.html
latex/: OSMP_8h_source.tex  md_README.tex  refman.tex
src/: OSMP_test.c
src/Praktikum1/: main.c
src/osmp_executables/: echoall.c  main.c  osmpExecutable_Barrier.c  osmpExecutable_BarrierLoop.c  osmpExecutable_Gather.c  osmpExecutable_GatherLoop.c  osmpExecutable_ISendIRecv.c  osmpExecutable_ISendIRecv2.c  osmpExecutable_SendIRecv.c  osmpExecutable_SendIrecv.c  osmpExecutable_SendRecv.c  osmpExecutable_SendRecv2.c  osmpExecutable_SendRecv3.c  osmp_Bcast.c  osmp_SendIrecv.c  osmp_SendRecv.c  testTidPid.c
src/osmp_library/: OSMP.h  logger.c  logger.h  osmplib.c  osmplib.h
src/osmp_runner/: osmp_run.c  osmp_run.h
test/: parameters.conf  runAllTests.sh  runAllTestsForOneExecutable.sh  runOneTest.sh  tests.json
